# libmf

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLibGcrypt.cmake  FindLibPcsclite.cmake
example/: CMakeLists.txt  Makefile  change_akey.c  change_keysettings.c  format_picc.c  get_applications.c  get_files.c  get_ndef.c  get_value.c  mfsh.c  pcsc_common.c  print_uid.c  test_auth.c
include/: CMakeLists.txt  libmf-private.h  libmf.h
src/: CMakeLists.txt  app.c  auth.c  crypto.c  error.c  file.c  mifare.c  picc.c  util.c
